...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_social"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...

            <NumberPicker
                android:id="@+id/npAddRating"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:theme="@style/NumberPickerText"
                app:layout_constraintBottom_toBottomOf="@+id/bAddRating"
                app:layout_constraintEnd_toStartOf="@+id/bAddRating"
                app:layout_constraintTop_toTopOf="@+id/bAddRating"
                app:layout_constraintVertical_bias="0.0">

            </NumberPicker>

...
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/movie_title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvRatingSocial"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="wrap_content"
...
